unpackaged/config/ready/16_Custom_Fees_preDeploy/objects/hed__Program_Plan__c/fields/redu_Annual_Fee_Group__c.field-meta.xml
<CustomField>
    <fullName>redu_Annual_Fee_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Annual Fee Group</label>
    <referenceTo>rio_ed__Fee__c</referenceTo>
    <relationshipLabel>Program Plans (Annual Fee Group)</relationshipLabel>
    <relationshipName>Annual_Program_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>