unpackaged/config/ready/16_Custom_Fees_preDeploy/objects/hed__Program_Plan__c/fields/redu_Program_Completion_Fee_Group__c.field-meta.xml
<CustomField>
    <fullName>redu_Program_Completion_Fee_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program Completion Fee Group</label>
    <referenceTo>rio_ed__Fee__c</referenceTo>
    <relationshipLabel>Program Plans (Program Completion Fee Group)</relationshipLabel>
    <relationshipName>Program_Completion_Program_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>