unpackaged/config/ready/16_Custom_Fees_preDeploy/objects/hed__Program_Plan__c/fields/redu_Term_wise_Fee_Group__c.field-meta.xml
<CustomField>
    <fullName>redu_Term_wise_Fee_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Term-wise Fee Group</label>
    <referenceTo>rio_ed__Fee__c</referenceTo>
    <relationshipLabel>Program Plans (Term-wise Fee Group)</relationshipLabel>
    <relationshipName>Term_wise_Program_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>